<resources>
    <string name="app_name">Unit Converter</string>

    <string name="area">Area</string>
    <string name="data_transfer_rate">Data Transfer Rate</string>
    <string name="digital_storage">Digital Storage</string>
    <string name="energy">Energy</string>
    <string name="frequency">Frequency</string>
    <string name="fuel_economy">Fuel Economy</string>
    <string name="length">Length</string>
    <string name="mass">Mass</string>
    <string name="plane_angle">Plane Angle</string>
    <string name="pressure">Pressure</string>
    <string name="speed">Speed</string>
    <string name="temperature">Temperature</string>
    <string name="time">Time</string>
    <string name="volume">Volume</string>

    <string name="unit_converter">Unit Converter</string>
    <string name="convert_from">Convert from:</string>
    <string name="convert_to">Convert to:</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="convert">Convert</string>
    <string name="result">Result</string>

    <string name="converter">Converter</string>

    <string-array name="area_units">
        <item>Square kilometre</item>
        <item>Square metre</item>
        <item>Square mile</item>
        <item>Square yard</item>
        <item>Square foot</item>
        <item>Square inch</item>
        <item>Hectare</item>
        <item>Acre</item>
    </string-array>

    <string-array name="data_transfer_rate_units">
        <item>Bit per second</item>
        <item>Kilobit per second</item>
        <item>Kilobyte per second</item>
        <item>Kibibit per second</item>
        <item>Megabit per second</item>
        <item>Megabyte per second</item>
        <item>Mebibit per second</item>
        <item>Gigabit per second</item>
        <item>Gigabyte per second</item>
        <item>Gibibit per second</item>
        <item>Terabit per second</item>
        <item>Terabyte per second</item>
        <item>Tebibit per second</item>
    </string-array>

    <string-array name="digital_storage_unit">
        <item>Byte</item>
        <item>Kilobyte</item>
        <item>Kibibyte</item>
        <item>Megabyte</item>
        <item>Mebibyte</item>
        <item>Gigabyte</item>
        <item>Gibibyte</item>
        <item>Terabyte</item>
        <item>Tebibyte</item>
        <item>Petabyte</item>
        <item>Pebibyte</item>
    </string-array>

    <string-array name="energy_units">
        <item>Joule</item>
        <item>Kilojoule</item>
        <item>Gram calorie</item>
        <item>Kilocalorie</item>
        <item>Watt hour</item>
        <item>Kilowatt hour</item>
        <item>Electronvolt</item>
        <item>British thermal unit</item>
        <item>Us therm</item>
        <item>Foot-pound</item>
    </string-array>

    <string-array name="frequency_units">
        <item>Hertz</item>
        <item>Kilohertz</item>
        <item>Megahertz</item>
        <item>Gigahertz</item>
    </string-array>

    <string-array name="fuel_economy_units">
        <item>US Miles per gallon</item>
        <item>Miles per gallon (Imperial)</item>
        <item>Kilometre per litre</item>
        <item>Litre per 100 kilometres</item>
    </string-array>

    <string-array name="length_units">
        <item>Kilometre</item>
        <item>Metre</item>
        <item>Centimetre</item>
        <item>Millimetre</item>
        <item>Micrometre</item>
        <item>Nanometre</item>
        <item>Mile</item>
        <item>Yard</item>
        <item>Foot</item>
        <item>Inch</item>
        <item>Nautical mile</item>
    </string-array>

    <string-array name="mass_units">
        <item>Tonne</item>
        <item>Kilogram</item>
        <item>Gram</item>
        <item>Milligram</item>
        <item>Microgram</item>
        <item>Imperial ton</item>
        <item>US ton</item>
        <item>Stone</item>
        <item>Pound</item>
        <item>Ounce</item>
    </string-array>

    <string-array name="plane_angle_units">
        <item>Degree</item>
        <item>Gradian</item>
        <item>Milliradian</item>
        <item>Minute of arc</item>
        <item>Radian</item>
        <item>Second of arc</item>
    </string-array>

    <string-array name="pressure_units">
        <item>Atmosphere</item>
        <item>Bar</item>
        <item>Pascal</item>
        <item>Pound-force per square inch</item>
        <item>Torr</item>
    </string-array>

    <string-array name="speeed_units">
        <item>Miles per hour</item>
        <item>Foot per second</item>
        <item>Metre per second</item>
        <item>Kilometre per hour</item>
        <item>Knot</item>
    </string-array>

    <string-array name="temperature_units">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>

    <string-array name="time_units">
        <item>Nanosecond</item>
        <item>Microsecond</item>
        <item>Millisecond</item>
        <item>Second</item>
        <item>Minute</item>
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
        <item>Decade</item>
        <item>Century</item>
    </string-array>

    <string-array name="volume_units">
        <item>US liquid gallon</item>
        <item>US liquid quart</item>
        <item>US liquid pint</item>
        <item>US legal cup</item>
        <item>US fluid ounce</item>
        <item>US tablespoon</item>
        <item>US teaspoon</item>
        <item>Cubic metre</item>
        <item>Litre</item>
        <item>Millilitre</item>
        <item>Imperial gallon</item>
        <item>Imperial quart</item>
        <item>Imperial pint</item>
        <item>Imperial cup</item>
        <item>Imperial fluid ounce</item>
        <item>Imperial tablespoon</item>
        <item>Imperial teaspoon</item>
        <item>Cubic foot</item>
        <item>Cubic inch</item>
    </string-array>
</resources>
