<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/unit_category_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_converter"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:background="@color/area"
        android:textStyle="bold"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_alignParentTop="true"
        />

    <TextView
        android:id="@+id/convert_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/unit_category_text_view"
        android:text="@string/convert_from"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:padding="@dimen/activity_horizontal_margin"/>

    <Spinner
        android:id="@+id/from_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/convert_from"
        android:layout_toEndOf="@id/convert_from"
        android:layout_below="@id/unit_category_text_view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        />

    <TextView
        android:id="@+id/convert_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/convert_from"
        android:text="@string/convert_to"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:padding="@dimen/activity_horizontal_margin"/>

    <Spinner
        android:id="@+id/to_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/convert_from"
        android:layout_toEndOf="@id/convert_from"
        android:layout_below="@id/convert_from"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        />

    <EditText
        android:id="@+id/quantity_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/convert_to"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:padding="@dimen/activity_vertical_margin"
        android:hint="@string/enter_a_number"
        android:ems="16"
        android:inputType="numberDecimal"
        />

    <Button
        android:id="@+id/convert_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:layout_below="@id/quantity_edit"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/convert_button"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/result"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>
</RelativeLayout>